Fix display issue of projects container on mobile

--- a/scss/settings/_base.scss
+++ b/scss/settings/_base.scss
@@ -70,6 +70,10 @@ main {
 					margin-right: 0;
 				}
 			}
+
+			@media screen and (max-width: $mediumdevice) {
+				display: block;
+			}
 		}
 	}
 
